MoodifyAPI/k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: busybox:1.35
      command: ["sleep", "3600"]
