MoodifyAPI/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodifyapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodifyapi
  template:
    metadata:
      labels:
        app: moodifyapi
    spec:
      containers:
        - name: moodifyapi
          image: hermione08/moodifyapi:latest
          ports:
            - containerPort: 80
