MoodifyAPI/k8s/loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodifyapi-service
spec:
  selector:
    app: moodifyapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5109
  type: LoadBalancer
