MoodifyAPI/k8s/moodifyapi-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodifyapi-lb
spec:
  selector:
    app: moodifyapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
