MoodifyAPI/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodifyapi-service
spec:
  selector:
    app: moodifyapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
