MoodifyAPI/k8s/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: moodifyapi-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # sélectionne le service istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "moodifyapi.local"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: moodifyapi-virtualservice
  namespace: default
spec:
  hosts:
  - "moodifyapi.local"
  gateways:
  - moodifyapi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: moodifyapi-service
        port:
          number: 80
